# ipatch

./: Apply.hs  Common.hs  DiffFile.hs  Help.lhs  Split.hs  TheCommands.hs  Version.hs  ipatch.cabal  ipatch.hs
src/: ipatch.hs
src/IPatch/: Apply.hs  Common.hs  DiffFile.hs  Help.lhs  Split.hs  TheCommands.hs  Version.hs
tests/: runall.sh
tests/apply1/: run.sh
tests/apply1/after/: changes
tests/apply1/after/patches/: series
tests/apply1/after/src/: code  newfile
tests/apply1/before/patches/: testpatch
tests/apply1/before/src/: code
tests/split1/: edithunk.sh  run.sh
tests/split1/after/patches/: featureA.patch  featureB.patch
tests/split1/before/patches/: testpatch
tests/split2/: run.sh
tests/split2/after/patches/: addfile.patch  removefile.patch
tests/split2/after/src/: oldfile
